--- a/bill-of-rights.html
+++ b/bill-of-rights.html
@@ -2,11 +2,31 @@
 <html>
 <head>
   <title>The US Bill of Rights</title>
+  <style>
+    .amendment-title {
+      color:green;
+      text-align: center;
+    }
+
+    .amendment-title:hover {
+      color:red;
+    }
+
+    .info {
+      background-color: yellow;
+      }
+
+      .amendment{
+        text-align: center;
+      }
+
+  </style>
+
 </head>
 <body>
   <main>
     <h1>The US Bill of Rights</h1>
-    <aside>
+    <aside class="info">
       <h4>About the US Bill of Rights</h4>
       <p>
         The first 10 amendments to the US Constitution make up the Bill of Rights. Written by James Madison in response to calls from several states for greater constitutional protection for individual liberties, the Bill of Rights lists specific prohibitions on governmental power.
@@ -15,17 +35,17 @@
 
     <article>
       <h2>Amendment I</h2>
-      <p>
+      <p class="amendment-title">
         Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the government for a redress of grievances.
       </p>
 
       <h2>Amendment II</h2>
-      <p>
+      <p class="amendment-title">
         A well regulated militia, being necessary to the security of a free state, the right of the people to keep and bear arms, shall not be infringed.
       </p>
 
       <h2>Amendment III</h2>
-      <p>
+      <p class="amendment-title">
         No soldier shall, in time of peace be quartered in any house, without the consent of the owner, nor in time of war, but in a manner to be prescribed by law.
       </p>
 
